default/objects/Coverages__c/Coverages__c.object-meta.xml
<CustomObject>
    <label>Coverages</label>
    <nameField>
        <label>Coverage Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>