default/objects/Coverages__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Coverages</relationshipLabel>
    <relationshipName>Coverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>