default/objects/Coverages__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CE</fullName>
                <label>Continente</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Contenido</label>
            </value>
            <value>
                <fullName>ECE</fullName>
                <label>Esteticos continente</label>
            </value>
            <value>
                <fullName>ECO</fullName>
                <label>Esteticos contenido</label>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>