default/objects/Coverages__c/fields/DeductibleAmountConsumed__c.field-meta.xml
<CustomField>
    <fullName>DeductibleAmountConsumed__c</fullName>
    <label>Deductible Amount Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>