default/objects/Coverages__c/fields/DeductibleAmountExists__c.field-meta.xml
<CustomField>
    <fullName>DeductibleAmountExists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deductible Amount Exists</label>
    <type>Checkbox</type>
</CustomField>