default/objects/Coverages__c/fields/FirstRisk__c.field-meta.xml
<CustomField>
    <fullName>FirstRisk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Risk</label>
    <type>Checkbox</type>
</CustomField>